// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: blocks > block with expressions: { 1; x; } 1`] = `
{
  "return": undefined,
  "statements": [
    {
      "type": "expression",
      "value": {
        "type": "lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
    },
    {
      "type": "expression",
      "value": {
        "type": "var",
        "variable": {
          "type": "name",
          "value": "x",
        },
      },
    },
  ],
  "type": "block",
}
`;

exports[`parser: blocks > block with only return: { return 2; } 1`] = `
{
  "return": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "statements": [],
  "type": "block",
}
`;

exports[`parser: blocks > block with return: { x; return 2; } 1`] = `
{
  "return": {
    "type": "lit",
    "value": {
      "type": "Num",
      "value": 2,
    },
  },
  "statements": [
    {
      "type": "expression",
      "value": {
        "type": "var",
        "variable": {
          "type": "name",
          "value": "x",
        },
      },
    },
  ],
  "type": "block",
}
`;
